chapter1-basics/the_project/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      containers:
        - name: the-project
          image: rahul004x/the-project:v3
          volumeMounts:
            - name: image-cache-volume
              mountPath: /app/cache
          ports:
            - containerPort: 3000
      volumes:
        - name: image-cache-volume
          persistentVolumeClaim:
            claimName: image-cache-pvc
