chapter1-basics/the_project/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3000
